--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,33 +1,7 @@
-/*.header {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    max-width: 1200px;
-    padding: 10px;
-  }
-  
-  .header h1 {
-    font-size: 24px;
-    margin: 0;
-  }
-  
-  .header nav a {
-    color: white;
-    margin: 0 10px;
-    text-decoration: none;
-  }*/
+
   html{
-    /*display: flex;*/
     background-color: #000;
   }
-
-  /*body {
-    font-family: Arial, sans-serif;
-    color: #333;
-    background-color: #f9f9f9;
-  }*/
-
-  /* horizontal navigation bar */
 
   header {
     margin: 0;
